[package]
name = "rrtm"
version = "0.1.0"
authors = ["Li Xin Rui <li.xinrui3@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.93"
image = "0.25.5"
log = "0.4.22"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
rayon = { version = "1.10.0" }
wasm-bindgen-rayon = { version = "1.2.2"}
serde = "1.0.215"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.72"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# Need to add the "strip = true" for it to work"
[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
strip = true

[profile.dev]
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
